@@ -147,6 +147,7 @@ ATTR_extraresc,
 ATTR_schedversion,
 ATTR_acctkeepdays,
 ATTR_lockfile,
+ATTR_credentiallifetime,
 ATTR_jobmustreport,
 ATTR_checkpoint_dir,
 ATTR_mailsubjectfmt,
