@@ -212,12 +212,12 @@ char        *log_file  = NULL;
 char        *path_home = PBS_SERVER_HOME;
 char        *path_acct;
 char         path_log[MAXPATHLEN + 1];
-char        *path_priv;
+char        *path_priv = NULL;
 char        *path_arrays;
 char        *path_jobs;
 char        *path_queues;
 char        *path_spool;
-char        *path_svrdb;
+char        *path_svrdb = NULL;
 char        *path_svrdb_new;
 char        *path_svrlog;
 char        *path_track;
