@@ -971,6 +971,19 @@ attribute_def svr_attr_def[] =
       ATR_TYPE_STR,
       PARENT_TYPE_SERVER
   },
+
+  /* SRV_ATR_CredentialLifetime */
+  {   ATTR_credentiallifetime,  /* "credential_lifetime" */
+      decode_l,
+      encode_l,
+      set_l,
+      comp_l,
+      free_null,
+      NULL_FUNC,
+      MGR_ONLY_SET,
+      ATR_TYPE_LONG,
+      PARENT_TYPE_SERVER
+  },
 	
   /* SRV_ATR_JobMustReport */
   { ATTR_jobmustreport,      /* "job_must_report" */
